[INTERNAL][FIX] sap.m.OverflowToolbar popup padding fixed
-fixed padding according the new visual specs

--- a/src/sap.m/src/sap/m/themes/base/OverflowToolbarAssociativePopover.less
+++ b/src/sap.m/src/sap/m/themes/base/OverflowToolbarAssociativePopover.less
@@ -17,7 +17,7 @@
   }
 
   &.sapMPopover .sapMPopoverCont .sapMPopoverScroll {
-	padding: 1rem;
+	padding: 0.25rem 0.5rem;
 
 	/* Disappear */
 	&> .sapMOTAPHidden {
@@ -97,7 +97,7 @@ html[dir=rtl][data-sap-ui-browser^="ed"] .sapMOTAPopover.sapMPopover .sapMPopove
   .sapMOTAPopover {
 
 	&.sapMPopover .sapMPopoverCont .sapMPopoverScroll {
-	  padding: 0.25rem;
+	  padding: 0.1875rem 0.375rem;
 	}
   }
 
